<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".DateCodeToDate">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnDateToDC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/convert_date_to_dc"
                android:textAllCaps="false"
                android:textColor="@color/colorTextWhite"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/rgDCFormatDCD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="top|start">

                <RadioButton
                    android:id="@+id/rbWWYYDCD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/format_wwyy" />

                <RadioButton
                    android:id="@+id/rbYYWWDCD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/format_yyww" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvEnterDateCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/enter_date_code"
                android:textColor="@color/colorTextGrey"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/etDateCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorTextWhite"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/dc_wwyy_format"
                android:inputType="number"
                android:importantForAutofill="no"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:textSize="24sp"
                tools:ignore="TextFields"
                tools:targetApi="o" />

            <Button
                android:id="@+id/btnConvertDC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/convert"
                android:textAllCaps="false"
                android:textColor="@color/colorTextWhite"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvResultDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/date_is_between"
                android:textColor="@color/colorTextGrey"
                android:textSize="30sp" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/avDCTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6270945777512054/1246867098">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>